2014-04-27  Niels Möller  <nisse@lysator.liu.se>

	* nettle.texinfo (Cipher modes): Subsection on AEAD constructions.
	(GCM): Update GCM documentation, including functions for
	gcm_aes128, gcm_camellia128, ...

2014-04-26  Niels Möller  <nisse@lysator.liu.se>

	* nettle.texinfo: Update for introduction of nettle_cipher_func.
	(GCM): Document GCM_DIGEST_SIZE.
	(UMAC): Document new UMAC constants.
	(Keyed hash functions): Make HMAC and UMAC their own info nodes.
	(EAX): Document EAX.

	* umac.h (UMAC_MIN_NONCE_SIZE, UMAC_MAX_NONCE_SIZE): New
	constants.

2014-04-25  Niels Möller  <nisse@lysator.liu.se>

	* All hash-related files: Renamed all _DATA_SIZE constants to
	_BLOCK_SIZE, for consistency. Old names kept for backwards
	compatibility.

	* nettle.texinfo (CCM): Documentation for CCM mode, contributed by
	Owen Kirby.

	* testsuite/ccm-test.c (test_cipher_ccm): And tests.

	* ccm.c (ccm_decrypt_message): Change length argument, should now
	be clear text (dst) length.
	* ccm-aes128.c (ccm_aes128_decrypt_message): Likewise.
	* ccm-aes192.c (ccm_aes192_decrypt_message): Likewise.
	* ccm-aes256.c (ccm_aes256_decrypt_message): Likewise.
	* ccm.h: Updated prototypes.

2014-04-22  Niels Möller  <nisse@lysator.liu.se>

	* nettle.texinfo (Recommended hash functions): Document additional
	sha512 variants.

	* sha2.h (sha512_224_ctx, sha512_256_ctx): New aliases for the
	sha512_ctx struct tag.

2014-04-17  Niels Möller  <nisse@lysator.liu.se>

	* examples/Makefile.in (SOURCES): Deleted next-prime.c (forgotten
	in 2014-04-13 change).

2014-04-16  Niels Möller  <nisse@lysator.liu.se>

	* testsuite/ccm-test.c (test_cipher_ccm): Deleted check for NULL
	authdata.

	* sha3-224.c (sha3_224_init): Pass pointer to context struct, not
	pointer to first element, to memset.
	* sha3-256.c (sha3_256_init): Likewise.
	* sha3-384.c (sha3_384_init): Likewise.
	* sha3-512.c (sha3_512_init): Likewise.

	* examples/eratosthenes.c (vector_alloc): Use sizeof(*vector)